--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <h1>Music Player for File List</h1>
     <section>
         <h2>Your music file list url</h2>
-        <div id="topcontrols">
-        </div>
         <div id="table"></div>
         <div>
-            <button type="button" id="load">Load</button>
-            <button type="button" id="askForListUrl">Load Remote List</button>
+            <button type="button" id="load">Load Above</button>
             <button type="button" id="clear">Clear</button>
+            <button type="button" id="remote">Load URL</button>
+            <button type="button" id="upload">Load File</button>
+            <input type="file" id="fileselector" style="display: none" />
         </div>
     </section>
     <section>
@@ -34,7 +34,8 @@
         <div>
             <button id="playpause">Play</button>
             <label for="playprogress" id="currentpos">-:--</label>
-            <progress id="playprogress"></progress><span id="length">-:--</span>
+            <progress id="playprogress"></progress>
+            <span id="length">-:--</span>
             <label for="loop">Loop</label>
             <select id="loop">
                 <option>None</option>
