--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section>
             <h2>Your music file list url</h2>
             <div>
-                <button type="button" id="load">Load Above</button>
+                <button type="button" id="load">Load Below</button>
                 <button type="button" id="clear">Clear</button>
                 <button type="button" id="remote">Load URL</button>
                 <button type="button" id="upload">Load File</button>
