--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <button type="button" id="clear">Clear</button>
                 <button type="button" id="remote">Load URL</button>
                 <button type="button" id="upload">Load File</button>
+                <button type="button" id="toggletable">Toggle Table</button>
                 <input type="file" id="fileselector" style="display: none" />
             </div>
-            <div id="table"></div>
+            <div id="table" data-toggle-state="shown"></div>
         </section>
         <section>
             <h2>The player</h2>
